--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <div class="container header__container">
         <a href="#" class="logo">
-          <img class="logo__img" src="logo.svg" alt="лого" />
+          <img class="logo__img" src="img/logo.svg" alt="лого" />
         </a>
         <nav class="nav">
           <ul class="list-reset nav__list">
@@ -35,10 +35,22 @@
           </ul>
         </nav>
         <div class="nav__btn">
-          <button class="btn header__btn" id="dd">SING UP</button>
-          <button class="btn header__btn" id="dd">LOG IN</button>
+          <button class="btn header__btn">SING UP</button>
+          <button class="btn header__btn">LOG IN</button>
         </div>
       </div>
     </header>
+    <main>
+      <section class="hero">
+        <div class="container hero__container">
+          <div class="hero__inner">
+            <!-- <h1>DDDDDDDDDDDD</h1> -->
+
+            <button class="btn hero__btn">АВТОРСКИЕ ТУРЫ В КАРЕЛИЮ</button>
+            <button class="btn hero__btn hero__btn-add">ЗАБРОНИРОВАТЬ</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
