--- a/index.html
+++ b/index.html
@@ -36,19 +36,22 @@
         </nav>
         <div class="nav__btn">
           <button class="btn header__btn">SING UP</button>
-          <button class="btn header__btn">LOG IN</button>
+          <button class="btn header__btn-in">LOG IN</button>
         </div>
       </div>
     </header>
     <main>
       <section class="hero">
         <div class="container hero__container">
-          <div class="hero__inner">
-            <!-- <h1>DDDDDDDDDDDD</h1> -->
+          <!-- <h1>DDDDDDDDDDDD</h1> -->
 
-            <button class="btn hero__btn">АВТОРСКИЕ ТУРЫ В КАРЕЛИЮ</button>
-            <button class="btn hero__btn hero__btn-add">ЗАБРОНИРОВАТЬ</button>
-          </div>
+          <button class="btn hero__btn">АВТОРСКИЕ ТУРЫ В КАРЕЛИЮ</button>
+          <button class="btn hero__btn hero__btn-add">ЗАБРОНИРОВАТЬ</button>
+        </div>
+      </section>
+      <section class="tour">
+        <div class="container tour__container">
+          <h1 class="title tour__title">ТУРЫ</h1>
         </div>
       </section>
     </main>
