--- a/index.html
+++ b/index.html
@@ -52,6 +52,62 @@
       <section class="tour">
         <div class="container tour__container">
           <h1 class="title tour__title">ТУРЫ</h1>
+          <ul class="list-reset tour__list">
+            <li class="tour-card">
+              <div class="tour-card__info">
+                <h3 class="tour-card__title">FRENDLY-TOUR</h3>
+                <p class="tour-card__data">01.05-10.05</p>
+                <svg
+                  width="301"
+                  height="141"
+                  viewBox="0 0 301 141"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M389.413 141V59.9283C344.647 66.7361 299.882 73.544 260.115 73.3286C220.348 73.1132 185.579 65.8747 152.114 50.5481C118.649 35.2215 86.4878 11.807 53.24 3.64714C19.9922 -4.51267 -14.3422 2.5823 -48.6766 9.67727V141H389.413Z"
+                    fill="#EFE5D3"
+                  />
+                </svg>
+              </div>
+            </li>
+            <li class="tour-card tour-card__badge" data-badge="%">
+              <div class="tour-card__info">
+                <h3 class="tour-card__title">ОСЕНЬ</h3>
+                <p class="tour-card__data">01.09-10.09</p>
+                <svg
+                  width="301"
+                  height="141"
+                  viewBox="0 0 301 141"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M389.413 141V59.9283C344.647 66.7361 299.882 73.544 260.115 73.3286C220.348 73.1132 185.579 65.8747 152.114 50.5481C118.649 35.2215 86.4878 11.807 53.24 3.64714C19.9922 -4.51267 -14.3422 2.5823 -48.6766 9.67727V141H389.413Z"
+                    fill="#EFE5D3"
+                  />
+                </svg>
+              </div>
+            </li>
+            <li class="tour-card">
+              <div class="tour-card__info">
+                <h3 class="tour-card__title">ЛЕТО</h3>
+                <p class="tour-card__data">01.06-10.06</p>
+                <svg
+                  width="301"
+                  height="141"
+                  viewBox="0 0 301 141"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M389.413 141V59.9283C344.647 66.7361 299.882 73.544 260.115 73.3286C220.348 73.1132 185.579 65.8747 152.114 50.5481C118.649 35.2215 86.4878 11.807 53.24 3.64714C19.9922 -4.51267 -14.3422 2.5823 -48.6766 9.67727V141H389.413Z"
+                    fill="#EFE5D3"
+                  />
+                </svg>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
