--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Strada_18</title>
+    <title>Strada_TOUR</title>
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -175,7 +175,9 @@
             <a href="">Наши гиды></a>
           </li>
         </ul>
-        <button class="btn header__btn">SING UP</button>
+        <a href="#" class="logo">
+          <img class="logo__img" src="img/logo2.png" alt="лого" />
+        </a>
       </div>
     </footer>
   </body>
