--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Strada_TOUR</title>
 
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
     <header class="header">
@@ -13,6 +14,7 @@
         <a href="#" class="logo">
           <img class="logo__img" src="img/logo.svg" alt="лого" />
         </a>
+
         <nav class="nav">
           <ul class="list-reset nav__list">
             <li class="nav__item">
@@ -34,6 +36,9 @@
             </li>
           </ul>
         </nav>
+        <button class="menu__btn">
+          <span></span><span></span><span></span>
+        </button>
         <div class="nav__btn">
           <button class="btn header__btn">SING UP</button>
           <button class="btn header__btn-in">LOG IN</button>
@@ -47,7 +52,7 @@
             <h1 class="title">АВТОРСКИЕ ТУРЫ В КАРЕЛИЮ</h1>
           </div>
           <div class="">
-            <button class="btn hero__btn">ЗАБРОНИРОВАТЬ</button>
+            <button class="hero__btn">ЗАБРОНИРОВАТЬ</button>
           </div>
         </div>
       </section>
