--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </li>
         </ul>
         <a href="#" class="logo">
-          <img class="logo__img" src="img/logo2.png" alt="лого" />
+          <img class="logo__img2" src="img/logo2.png" alt="лого" />
         </a>
       </div>
     </footer>
