--- a/index.html
+++ b/index.html
@@ -36,21 +36,21 @@
         <nav class="nav">
           <ul class="list-reset nav__list">
             <li class="nav__item">
-              <a href="#" class="nav__link">О НАС</a>
+              <a href="#hero" class="nav__link">О НАС</a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">КАТАЛОГ</a>
+              <a href="#tour" class="nav__link">ТУРЫ</a>
               <ul class="sublist">
                 <li class="sublist__item">
-                  <a href="#" class="sublist__link">макет №1</a>
+                  <a href="#" class="sublist__link">Тур №1</a>
                 </li>
                 <li class="sublist__item">
-                  <a href="#" class="sublist__link">макет №2</a>
+                  <a href="#" class="sublist__link">Тур №2</a>
                 </li>
               </ul>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">ДОСТАВКА</a>
+              <a href="#contacts" class="nav__link">КОНТАКТЫ</a>
             </li>
           </ul>
         </nav>
@@ -64,7 +64,7 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero" id="hero">
         <div class="container hero__container">
           <div class="hero__left">
             <h1 class="title">АВТОРСКИЕ ТУРЫ В КАРЕЛИЮ</h1>
@@ -74,7 +74,7 @@
           </div>
         </div>
       </section>
-      <section class="tour">
+      <section class="tour" id="tour">
         <div class="container tour__container">
           <h2 class="title tour__title">ТУРЫ</h2>
           <ul class="list-reset tour__list">
@@ -144,7 +144,7 @@
           </ul>
         </div>
       </section>
-      <section class="contacts">
+      <section class="contacts" id="contacts">
         <div class="container contacts__container">
           <h2 class="title tour__title">КОНТАКТЫ</h2>
           <div class="contacts__wrapper">
